# shareet

./: .gitignore  Cargo.toml  README.md  flake.nix
mdry/: Cargo.toml
mdry/examples/basic/: Cargo.toml
mdry/examples/basic/src/: main.rs
mdry/src/: color.rs  lib.rs  renderer.rs  shader.wgsl  shapes.rs  window.rs
src/: lib.rs  main.rs  painter.rs  renderer.rs  shader.wgsl  shapes.rs  text_renderer.rs
src/widgets/: cpu_usage.rs  mod.rs  pager.rs  sys_time.rs  sys_tray.rs  text.rs
