[package]
name = "mdry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.17.1", features = ["vulkan-portability"]}
bytemuck = { version = "1.14.0", features = ["derive"] }
indexmap = "2.0.2"
raw-window-handle = "0.5.2"
x11rb = { version = "0.12.0", features = ["allow-unsafe-code"] }
glyphon = { git = "https://github.com/grovesNL/glyphon" }
thiserror = "1.0.50"
